src/test/deca/context/invalid/class/Cast_to_class_not_related.deca
// Description:
//    Test de declaration d'une classe avec une methode dedans
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 20/01/2022

class A{
}

class C{
}

{
    A a = new A();
    C c = (C) (a);
}